--- a/solution/typescript/code/package.json
+++ b/solution/typescript/code/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "test-coverage": "jest --coverage",
     "test": "jest"
+
   },
   "keywords": [],
   "author": "",
